Build to master now

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personalwebsite2019",
-  "homepage": "http://brianc725.github.io/Personal-Website",
+  "homepage": "http://brianc725.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
