--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^6.4.0",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
+    "react-dark-mode-toggle": "0.0.10",
     "react-dom": "^16.9.0",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.0.1",
