--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "firebase": "^6.4.0",
+    "firebase": "^8.10.0",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dark-mode-toggle": "0.0.10",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
